# python-learning

Algorithms/: binary_search.py
Contact Book/: requirements.txt
Contact Book/src/: main.py
Cooking App/: .gitignore  main.py  pyproject.toml  recipes.db
Cooking App/app/: config.py  prompts.py
Cooking App/app/db/: db_helpers.py  models.py  session.py
Cooking App/app/routes/: ingredients.py  recipes.py  reviews.py  routes.py  schemas.py  tts.py
Cooking App/app/scripts/: add_recipe.py  export_csv.py  extract_and_store_recipe.py  remove_duplicate_recipe.py  reset_db.py
Cooking App/app/services/: openai_service.py  tts.py
Cooking App/app/services/templates/: recipe_prompt.tmp
Cooking App/app/tools/: openai_response_parser.py  serializers.py
Cooking App/static/html/: chocolate_cake.html
Cooking App/static/prompts/: system_extract_recipe.txt  system_recipe_prompt.txt  user_extract_recipe.txt  user_recipe_prompt.txt
Cooking App/tests/: __init__.py  conftest.py
Cooking App/tests/routes/: __init__.py  test_recipes.py
Currency Converter/src/: app.py  constants.py  currency_service.py  curreny_convertor.py  exercise.py  requirements.txt
Design patterns/creationals/: builder.py  factory_method.py  singleton.py
Email sender/: requirements.txt
Happy numbers/: happy_numbers.py
LLD/: tictactoe.py
LLD/elevator/: driver.py  (+3 more)
Mony Hall problem/: monty_hall.py
Youtube Downloader/: requirements.txt
langchain-openai/: .gitignore  chat_engine.py  document_loader.py  document_processor.py  langchain_chatbot.py  main.py  rag_chatbot.py  requirements.txt
(+35 files in other folders)
